sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3:7: error: ')' expected but ';' found.
        swap(j;j+1)
              ^AlgBubbleSort3:7: error: ';' expected but ')' found.
        swap(j;j+1)
                  ^